--- a/components/pages.scss
+++ b/components/pages.scss
@@ -84,6 +84,7 @@
 /* Blog */
 .section-blog-header {
   background-color: var(--bg-grey);
+  padding-top: 100px;
 }
 
 .blog-header {
@@ -131,6 +132,7 @@
 /* About */
 .section-about-header {
   background-color: var(--bg-about);
+  padding-top: 100px;
 }
 
 .about-header {
