--- a/components/template.scss
+++ b/components/template.scss
@@ -66,6 +66,10 @@
   }
 }
 
+.filter-list {
+  min-height: 500px;
+}
+
 .all {
   padding-top: 3rem;
   padding-bottom: 3rem;
